<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Swish &amp; Flick</string>
    <string name="search_intro">Encontre os mais diversos e incríveis produtos que a Swish &amp; Flick tem para você</string>
    <string name="search_bar">  Buscar</string>
    <string name="search_previous">Resultados Anteriores</string>
    <string name="search_results">Resultados:</string>
    
    <!-- Bottom Navigation Bar Button names -->
    <string name="bottom_bar_home">Home</string>
    <string name="bottom_bar_categories">Categorias</string>
    <string name="bottom_bar_search">Buscar</string>
    <string name="bottom_bar_profile">Perfil</string>
    <string name="bottom_bar_cart">Carrinho</string>


    <!-- Errors in ProductValidation -->
    <string name="validation_error_title">Insira um título válido</string>
    <string name="validation_error_description">Insira uma descrição válida</string>
    <string name="validation_error_pages">Insira um número de páginas válido</string>
    <string name="validation_error_publisher">Insira uma editora válida</string>
    <string name="validation_error_author">Insira um nome do autor válido</string>
    <string name="validation_error_price" tools:ignore="ExtraTranslation">Insira um preço válido</string>
    <string name="validation_error_max_speed">Insira uma velocidade válida</string>
    <string name="validation_error_size">Insira um tamanho válido</string>
    <string name="validation_error_amount">Insira uma quantidade válida</string>
    <string name="validation_error_effects">Insira efeitos válidos</string>
    <string name="validation_error_images">Insira ao menos uma imagem</string>
    <string name="validation_error_stock">Insira um valor válido para estoque</string>
    <string name="error_unknown">Erro desconhecido</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="categories">
        <item>Book</item>
        <item>Broomstick</item>
        <item>Clothing</item>
        <item>Potion</item>
    </string-array>

    <string-array name="categoriesPT">
        <item>Livro</item>
        <item>Vassoura</item>
        <item>Vestimenta</item>
        <item>Poção</item>
    </string-array>

    <string name="booksPT">Livros</string>
    <string name="clothingsPT">Vestimentas</string>
    <string name="jewlryPT">Joias</string>
    <string name="muggle_artifactsPT">Artefatos Trouxas</string>
    <string name="potionsPT">Poções</string>
    <string name="quidditchPT">Quadribol</string>
    <string name="wizzard_artifactsPT">Artefatos Bruxos</string>
    <string name="broomsticksPT">Vassouras</string>

</resources>
