<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/bottom_bar_home" />

    <item
        android:id="@+id/nav_categories"
        android:icon="@drawable/ic_categories_black_24dp"
        android:title="@string/bottom_bar_categories" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/bottom_bar_search" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/bottom_bar_profile" />

    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/bottom_bar_cart" />

</menu>